# ChangeLog for sci-libs/openfoam-src
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-src-1.4.1_p20080827.ebuild:
  Fixed typo in OpenFOAM sources

  28 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-src-1.4.1_p20080827.ebuild,
  +files/openfoam-src-1.4.1_p20080827.patch,
  +files/openfoam-src-compile-1.4.1_p20080827.patch:
  Update patches for the OpenFOAM sources

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-src-1.4.1_p20080131.ebuild, openfoam-src-1.5.ebuild:
  Changed version dependencies

  28 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-src-1.5.ebuild:
  Removed unnecessary insopts line

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  openfoam-src-1.5.ebuild:
  Fix unnecessary quoting

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-src-1.5.ebuild, +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -openfoam-src-1.4.1_p20080131.patch,
  -openfoam-src-compile-1.4.1_p20080131.patch:
  Move patchset to dev.ge.org

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -openfoam-src-1.4.1_p20080118.patch,
  -openfoam-src-compile-1.4.1_p20080118.patch, openfoam-src-1.4.1_p20080118:
  Drop old

  31 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +files/openfoam-src-1.4.1_p20080131.patch,
  +files/openfoam-src-compile-1.4.1_p20080131.patch,
  +openfoam-src-1.4.1_p20080131.ebuild:
  Update patches in OpenFOAM kernel sources

  30 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +files/openfoam-src-compile-1.4.1_p20080118.patch,
  +files/openfoam-src-1.4.1_p20080118.patch, +metadata.xml,
  +openfoam-src-1.4.1_p20080118.ebuild:
  New Ebuild for the OpenFOAM kernel sources
