@@ -3,9 +3,7 @@ AUX openfoam-src-1.4.1_p20080827.patch 31197 RMD160 83bbf48def96090dfe5ba37e702a
 AUX openfoam-src-compile-1.4.1_p20080827.patch 6143 RMD160 ab03b9d55ee2d6eb3515fe2430e42f2204177bb9 SHA1 8301b591701f2bf6cb182f1cd415d0348e46d98b SHA256 999098d347d417ff88724ea30c6a18b7cc3a8bbecfcb23b5cfdcbe17afdb58c4
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
-DIST openfoam-src-1.4.1_p20080131-patches-0.1.tar.bz2 6927 RMD160 5732737a34911ee4060697270cdab90c2d0d0a41 SHA1 1d1449de56aff8b8e8d28645f651ede4f4e9e934 SHA256 24683324d1533c5aee9c067b7b338a49f2d1be7866a4b71127e1bdd6f5b772af
-EBUILD openfoam-src-1.4.1_p20080131.ebuild 1078 RMD160 b77b98b3d6f258f06a4a74fd7c89189e0e5e66e9 SHA1 d80a1313763266eff56e8f3b4d551b379e77a198 SHA256 e895a86991df5cc1962c29c587634fb29fa2c5f38641a8b5a91fedacf7369cf3
 EBUILD openfoam-src-1.4.1_p20080827.ebuild 955 RMD160 09ffd62f6ba4e2fddb804ea11945d7e25a3ab6ba SHA1 0eeaac0b857f879a422f0d96a30b7218dd1910eb SHA256 8e8dd2f319412c0d073d2b2f844901b2ce78ab1288d754c8ff09c42770b8c557
 EBUILD openfoam-src-1.5.ebuild 906 RMD160 c69dc78b02d216716f28fbd8a9c785fdbb666638 SHA1 9fdd95c4070f71009414bdbcfaee62840e2d9cef SHA256 f8eb100ad1a018c9b17a8a4c4af727b19b82bab27fd68523a9fbbb934340f776
-MISC ChangeLog 1834 RMD160 b65701ad39546830f97c7e56542797aea6ed635d SHA1 ac204e197128660bfc865c732f505a48e101a920 SHA256 a963148abc07c35c677f9ba1f248c7638def0d598b345786740eb42b7005ad16
+MISC ChangeLog 1953 RMD160 50b3dab569fac4f67627680a27f6e0f1ab919b17 SHA1 8c7b4063033d667efeb147817fe325eb28ca02ff SHA256 01eb8ba6dabb67bf3c6e075083c73046a759d44d6a3f154170c2e55915d56b7f
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
