@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -openfoam-src-1.4.1_p20080131.ebuild:
+  Drop old version
+
   29 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
   openfoam-src-1.4.1_p20080827.ebuild:
   Fixed typo in OpenFOAM sources
